[gd_scene load_steps=3 format=3 uid="uid://c53f0p816ud5c"]

[ext_resource type="Script" uid="uid://c1if78g12q3vu" path="res://PlayerCharacter/testInventory.gd" id="1_6380j"]
[ext_resource type="Texture2D" uid="uid://dmixadkijfeur" path="res://GameDesigns/HeroSprite.png" id="2_6iu11"]

[node name="Inventory" type="Node2D"]
script = ExtResource("1_6380j")

[node name="Button" type="Button" parent="."]
offset_left = 67.0
offset_top = 332.0
offset_right = 197.0
offset_bottom = 487.0
text = "add item"

[node name="Button2" type="Button" parent="."]
offset_left = 203.0
offset_top = 332.0
offset_right = 333.0
offset_bottom = 487.0
text = "remove item"

[node name="Button3" type="Button" parent="."]
offset_left = 330.0
offset_top = 331.0
offset_right = 460.0
offset_bottom = 486.0
text = "check inv"

[node name="Button4" type="Button" parent="."]
offset_left = 471.0
offset_top = 327.0
offset_right = 624.0
offset_bottom = 482.0
text = "check length of inv"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 124.0
offset_top = 252.0
offset_right = 286.0
offset_bottom = 317.0

[node name="ItemList" type="ItemList" parent="."]
offset_left = 303.0
offset_top = 61.0
offset_right = 580.0
offset_bottom = 228.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 269.0
offset_bottom = 149.0
text = "test"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 321.0
offset_top = 233.0
offset_right = 590.0
offset_bottom = 322.0

[node name="HeroSprite" type="Sprite2D" parent="."]
position = Vector2(196, 140)
scale = Vector2(0.3825, 0.3825)
texture = ExtResource("2_6iu11")

[node name="Button5" type="Button" parent="."]
offset_left = 598.0
offset_top = 64.0
offset_right = 728.0
offset_bottom = 219.0
text = "equip item"

[connection signal="pressed" from="Button" to="." method="_onAddPressed"]
[connection signal="pressed" from="Button2" to="." method="_onRemovePressed"]
[connection signal="pressed" from="Button3" to="." method="_onCheckPressed"]
[connection signal="pressed" from="Button4" to="." method="_onLengthPressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
